[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Update_Atributes.gd" type="Script" id=1]
[ext_resource path="res://fonts/Numbers.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.0352941, 0.14902, 1 )

[node name="atributes" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 256.0
margin_top = 197.0
margin_right = 796.0
margin_bottom = 443.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 523.0
margin_top = 208.0
margin_right = 563.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
text = "Dano:"

[node name="Label5" type="Label" parent="."]
margin_left = 659.0
margin_top = 208.0
margin_right = 699.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
text = "Level:"

[node name="Label6" type="Label" parent="."]
margin_left = 659.0
margin_top = 260.0
margin_right = 699.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "Exp:"

[node name="Label7" type="Label" parent="."]
margin_left = 733.0
margin_top = 260.0
margin_right = 739.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "/"

[node name="Label8" type="Label" parent="."]
margin_left = 587.0
margin_top = 260.0
margin_right = 593.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "/"

[node name="Label2" type="Label" parent="."]
margin_left = 524.0
margin_top = 260.0
margin_right = 564.0
margin_bottom = 279.0
custom_fonts/font = ExtResource( 2 )
text = "Vida:"

[node name="Label3" type="Label" parent="."]
margin_left = 523.0
margin_top = 307.0
margin_right = 570.0
margin_bottom = 327.0
custom_fonts/font = ExtResource( 2 )
text = "Defesa:"

[node name="Label4" type="Label" parent="."]
margin_left = 522.0
margin_top = 357.0
margin_right = 595.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 2 )
text = "Velocidade:"

[node name="lbl_velocidade" type="Label" parent="."]
margin_left = 611.0
margin_top = 357.0
margin_right = 631.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_defesa" type="Label" parent="."]
margin_left = 611.0
margin_top = 307.0
margin_right = 631.0
margin_bottom = 327.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_vida" type="Label" parent="."]
margin_left = 611.0
margin_top = 260.0
margin_right = 631.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_currentvida" type="Label" parent="."]
margin_left = 567.0
margin_top = 260.0
margin_right = 587.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_dano" type="Label" parent="."]
margin_left = 611.0
margin_top = 208.0
margin_right = 631.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_level" type="Label" parent="."]
margin_left = 756.0
margin_top = 208.0
margin_right = 776.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_currentexp" type="Label" parent="."]
margin_left = 706.0
margin_top = 260.0
margin_right = 726.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="lbl_maxexp" type="Label" parent="."]
margin_left = 755.0
margin_top = 260.0
margin_right = 775.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="btn_Atribuir" type="Button" parent="."]
margin_left = 449.9
margin_top = 410.25
margin_right = 513.9
margin_bottom = 436.25
custom_fonts/font = ExtResource( 2 )
text = "Atribuir"

[node name="btn_Fechar" type="Button" parent="."]
margin_left = 721.0
margin_top = 410.25
margin_right = 785.0
margin_bottom = 436.25
custom_fonts/font = ExtResource( 2 )
text = "Fechar"

[node name="btn_Str_Down" type="Button" parent="."]
margin_left = 494.0
margin_top = 233.0
margin_right = 513.0
margin_bottom = 253.0
action_mode = 0
text = "v"

[node name="btn_Vit_Down" type="Button" parent="."]
margin_left = 494.0
margin_top = 282.0
margin_right = 513.0
margin_bottom = 302.0
action_mode = 0
text = "v"

[node name="btn_Def_Down" type="Button" parent="."]
margin_left = 494.0
margin_top = 332.0
margin_right = 513.0
margin_bottom = 352.0
action_mode = 0
text = "v"

[node name="btn_Agi_Down" type="Button" parent="."]
margin_left = 494.0
margin_top = 382.0
margin_right = 513.0
margin_bottom = 402.0
action_mode = 0
text = "v"

[node name="btn_Str_Up" type="Button" parent="."]
margin_left = 494.0
margin_top = 211.0
margin_right = 513.0
margin_bottom = 231.0
action_mode = 0
text = "^"

[node name="btn_Vit_Up" type="Button" parent="."]
margin_left = 494.0
margin_top = 260.0
margin_right = 513.0
margin_bottom = 280.0
action_mode = 0
text = "^"

[node name="btn_Def_Up" type="Button" parent="."]
margin_left = 494.0
margin_top = 310.0
margin_right = 513.0
margin_bottom = 330.0
action_mode = 0
text = "^"

[node name="btn_Agi_Up" type="Button" parent="."]
margin_left = 494.0
margin_top = 360.0
margin_right = 513.0
margin_bottom = 380.0
text = "^"

[node name="lbl_Str" type="Label" parent="."]
margin_left = 270.0
margin_top = 208.0
margin_right = 310.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
text = "STR:"
max_lines_visible = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 266.0
margin_top = 204.0
margin_right = 785.0
margin_bottom = 208.0

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 266.0
margin_top = 254.0
margin_right = 518.0
margin_bottom = 258.0

[node name="HSeparator3" type="HSeparator" parent="."]
margin_left = 266.0
margin_top = 304.0
margin_right = 518.0
margin_bottom = 308.0

[node name="HSeparator4" type="HSeparator" parent="."]
margin_left = 266.0
margin_top = 354.0
margin_right = 518.0
margin_bottom = 358.0

[node name="HSeparator5" type="HSeparator" parent="."]
margin_left = 266.0
margin_top = 403.0
margin_right = 785.0
margin_bottom = 407.0

[node name="lbl_Vit" type="Label" parent="."]
margin_left = 270.0
margin_top = 260.0
margin_right = 310.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "VIT:"

[node name="lbl_Def" type="Label" parent="."]
margin_left = 270.0
margin_top = 307.0
margin_right = 309.354
margin_bottom = 327.0
custom_fonts/font = ExtResource( 2 )
text = "DEF:"

[node name="lbl_Agi" type="Label" parent="."]
margin_left = 270.0
margin_top = 357.0
margin_right = 309.354
margin_bottom = 377.0
custom_fonts/font = ExtResource( 2 )
text = "AGI:"

[node name="lbl_Pontos" type="Label" parent="."]
margin_left = 270.0
margin_top = 413.261
margin_right = 399.0
margin_bottom = 433.261
custom_fonts/font = ExtResource( 2 )
text = "Pontos dispon√≠veis: "

[node name="lbl_Pts" type="Label" parent="."]
margin_left = 398.0
margin_top = 413.0
margin_right = 438.0
margin_bottom = 433.0
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="atr_Str" type="TextEdit" parent="."]
margin_left = 449.0
margin_top = 210.0
margin_right = 491.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 2 )
readonly = true
breakpoint_gutter = true

[node name="atr_Vit" type="TextEdit" parent="."]
margin_left = 449.0
margin_top = 259.0
margin_right = 491.0
margin_bottom = 302.0
custom_fonts/font = ExtResource( 2 )
readonly = true
breakpoint_gutter = true

[node name="atr_Def" type="TextEdit" parent="."]
margin_left = 449.0
margin_top = 309.0
margin_right = 491.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 2 )
readonly = true
breakpoint_gutter = true

[node name="atr_Agi" type="TextEdit" parent="."]
margin_left = 449.0
margin_top = 359.0
margin_right = 491.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 2 )
readonly = true
breakpoint_gutter = true

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 783.0
margin_top = 205.0
margin_right = 787.0
margin_bottom = 405.0

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 516.0
margin_top = 205.0
margin_right = 520.0
margin_bottom = 404.0

[node name="VSeparator3" type="VSeparator" parent="."]
margin_left = 265.0
margin_top = 205.0
margin_right = 269.0
margin_bottom = 405.0
[connection signal="button_up" from="btn_Atribuir" to="." method="_on_btn_Atribuir_button_up"]
[connection signal="button_up" from="btn_Fechar" to="." method="_on_btn_Fechar_button_up"]
[connection signal="button_up" from="btn_Str_Down" to="." method="_on_btn_Str_Down_button_up"]
[connection signal="button_up" from="btn_Vit_Down" to="." method="_on_btn_Vit_Down_button_up"]
[connection signal="button_up" from="btn_Def_Down" to="." method="_on_btn_Def_Down_button_up"]
[connection signal="button_up" from="btn_Agi_Down" to="." method="_on_btn_Agi_Down_button_up"]
[connection signal="button_up" from="btn_Str_Up" to="." method="_on_btn_Str_Up_button_up"]
[connection signal="button_up" from="btn_Vit_Up" to="." method="_on_btn_Vit_Up_button_up"]
[connection signal="button_up" from="btn_Def_Up" to="." method="_on_btn_Def_Up_button_up"]
[connection signal="button_up" from="btn_Agi_Up" to="." method="_on_btn_Agi_Up_button_up"]
